# Vulkan

./: CMakeLists.txt
data/Shaders/: Mesh.vert  SolidColor.frag  Texture.frag
include/Strawberry/Graphics/: Instance.hpp  Window.hpp
share/: Shaders.cmake  compile_shader.py
src/: Instance.cpp  Window.cpp
src/Strawberry/Graphics/: Buffer.cpp  Buffer.hpp  BufferView.cpp  BufferView.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Event.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  ShaderModule.cpp  ShaderModule.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp
src/Strawberry/Graphics/2D/: .gitignore  FontFace.cpp  FontFace.hpp  Image.frag  Image.vert  ImageRenderer.cpp  ImageRenderer.hpp  Sprite.cpp  Sprite.frag  Sprite.hpp  Sprite.vert  SpriteRenderer.cpp  SpriteRenderer.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Text.frag  Text.vert  TextRenderer.cpp  TextRenderer.hpp  Transform2D.cpp  Transform2D.hpp
src/Strawberry/Graphics/Input/: Key.cpp  Key.hpp  Mouse.hpp
src/Strawberry/Graphics/Text/: FontFace.cpp  FontFace.hpp  Text.frag  Text.vert  TextRenderer.cpp  TextRenderer.hpp
src/Strawberry/Graphics/Vulkan/: Buffer.cpp  Buffer.hpp  BufferView.cpp  BufferView.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  Queue.cpp  Queue.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  ShaderModule.cpp  ShaderModule.hpp  (+4 more)
src/Strawberry/Vulkan/: Address.hpp  Allocator.cpp  Allocator.hpp  Buffer.cpp  Buffer.hpp  BufferView.cpp  BufferView.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputePipeline.cpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  DeviceMemory.cpp  DeviceMemory.hpp  Error.hpp  Fence.cpp  Fence.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Image.cpp  Image.hpp  ImageMemoryBarrier.cpp  ImageMemoryBarrier.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  NaiveAllocator.cpp  NaiveAllocator.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  (+16 more)
src/Strawberry/Vulkan/Descriptor/: DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Sampler.cpp
src/Strawberry/Vulkan/Device/: DescriptorPoolAllocator.cpp  DescriptorPoolAllocator.hpp  Device.cpp  Device.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp
src/Strawberry/Vulkan/Math/: Projection.hpp
src/Strawberry/Vulkan/Memory/: Allocation.cpp  Allocation.hpp  AllocationRequest.hpp  Allocator.cpp  Allocator.hpp  BuddyAllocator.cpp  BuddyAllocator.hpp  ChainAllocator.hpp  FallbackAllocator.hpp  FreelistAllocator.cpp  FreelistAllocator.hpp  Memory.cpp  Memory.hpp  MemoryBlock.hpp  MemoryPool.cpp  MemoryPool.hpp  MemoryTypeCriteria.cpp  MemoryTypeCriteria.hpp  MotherAllocator.hpp  NaiveAllocator.cpp  NaiveAllocator.hpp  NaiveMultiAllocator.cpp  NaiveMultiAllocator.hpp  PolicyAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SingleAllocator.hpp
src/Strawberry/Vulkan/Memory/Allocator/: AllocationError.hpp  AllocationRequest.hpp  Allocator.cpp  Allocator.hpp  ChainAllocator.hpp  FallbackAllocator.hpp  FreelistAllocator.cpp  FreelistAllocator.hpp  MonoAllocator.cpp  MonoAllocator.hpp  MultiAllocator.hpp  NaiveAllocator.cpp  NaiveAllocator.hpp  NaiveMultiAllocator.hpp  NaivePolyAllocator.cpp  NaivePolyAllocator.hpp  PolyAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SingleAllocator.cpp  SingleAllocator.hpp
src/Strawberry/Vulkan/Pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp
src/Strawberry/Vulkan/Queue/: Batch.hpp  BatchRenderer.cpp  BatchRenderer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandParameters.hpp  CommandPool.cpp  CommandPool.hpp  ImageMemoryBarrier.cpp  Queue.cpp  Queue.hpp
src/Strawberry/Vulkan/Resource/: Buffer.cpp  Buffer.hpp  BufferView.cpp  BufferView.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  ImageView.cpp  ImageView.hpp
src/Strawberry/Vulkan/Synchronisation/: Fence.cpp  Fence.hpp
test/: .gitignore  Main.cpp  Pattern.comp  SolidColor.frag
